# IframeXtract

./: .gitignore  README.md  bui.d_deb.sh  main.py  pyproject.toml
.github/workflows/: main.yml
debian/: control  iframextract
debian/docs/: iframextract.1
iframextract/: cli.py  extractor.py
